--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,21 @@ body {
   padding: 0 10px;
   margin: 0 auto;
 }
+
+@media screen and (min-width: 1400px) {
+}
+
+@media screen and (min-width: 1200px) {
+}
+
+@media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 576px) {
+}
+
+@media screen and (width < 576px) {
+}
