--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ body {
   padding: 0 10px;
   margin: 0 auto;
 }
+.project__pattern {
+  display: none;
+}
 .header {
   display: flex;
   column-gap: 30px;
@@ -74,6 +77,7 @@ body {
   min-height: 47px;
   color: var(--color-title);
   font-weight: 600;
+  margin-bottom: 107px;
 }
 .header__container {
 }
@@ -108,6 +112,7 @@ body {
   position: relative;
   transition: all ease-in-out 0.28s;
   cursor: default;
+  text-transform: uppercase;
 }
 .nav-menu__link:not(.nav-menu__link_active):hover {
   cursor: pointer;
@@ -147,6 +152,111 @@ body {
 .header__btn:active {
   transform: translate(-1px, 1px);
   box-shadow: none;
+}
+/* ==========PROJECT============= */
+.project {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  row-gap: 30px;
+  min-height: 659px;
+  margin-bottom: 50px;
+}
+.project__info {
+}
+.project-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1 1 613px;
+}
+.project-info__subtitle {
+  text-transform: uppercase;
+  color: var(--color-main);
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 12px;
+}
+.project-info__title {
+  color: var(--color-title);
+  font-size: 72px;
+  font-family: var(--ff-more);
+  font-weight: 600;
+  line-height: 78px;
+  margin-bottom: 23px;
+}
+.project-info__text {
+  color: var(--color-main);
+  font-size: 18px;
+  line-height: 30px;
+  margin-bottom: 28px;
+}
+.project-info__button {
+  align-self: baseline;
+  min-width: 142px;
+}
+.decbase-btn {
+  background: var(--bg-btn);
+  border-radius: 20px 0;
+  color: var(--color-more);
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 43px;
+  border: 2px solid var(--bg-btn);
+  transition: all ease-in-out 0.28s;
+}
+.decbase-btn:hover {
+  cursor: pointer;
+  background: var(--color-more);
+  color: var(--bg-btn);
+  box-shadow: 5px 5px 5px var(--bg-btn);
+}
+.decbase-btn:active {
+  transform: translate(1px, 1px);
+  box-shadow: none;
+}
+.project__img {
+}
+.project-img {
+  position: relative;
+  flex: 1 1 700px;
+  min-height: 480px;
+  max-height: 626px;
+  border-radius: 140px 0;
+  margin-right: 34px;
+}
+.project-img::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 34px;
+  top: 33px;
+  width: 100%;
+  height: 100%;
+  border-radius: 140px 0;
+  border: 2px solid #b0855b;
+}
+.project-img img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 140px 0;
+  object-fit: cover;
+}
+/* =========================== */
+@media (min-width: 1920px) {
+  .project__pattern {
+    display: block;
+    position: absolute;
+    left: calc(-213px + -51px);
+    bottom: -76.55px;
+    width: 213px;
+    height: 154px;
+  }
 }
 @media (max-width: 1200px) {
 }
