--- a/css/style.css
+++ b/css/style.css
@@ -67,9 +67,32 @@ body {
   padding: 0 10px;
   margin: 0 auto;
 }
+/* ======================= */
 .project__pattern {
   display: none;
 }
+.decbase-btn {
+  background: var(--bg-btn);
+  border-radius: 20px 0;
+  color: var(--color-more);
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 43px;
+  border: 2px solid var(--bg-btn);
+  transition: all ease-in-out 0.28s;
+}
+.decbase-btn:hover {
+  cursor: pointer;
+  background: var(--color-more);
+  color: var(--bg-btn);
+  box-shadow: 5px 5px 5px var(--bg-btn);
+}
+.decbase-btn:active {
+  transform: translate(1px, 1px);
+  box-shadow: none;
+}
+/* ============================= */
 .header {
   display: flex;
   column-gap: 30px;
@@ -161,7 +184,7 @@ body {
   flex-wrap: wrap;
   row-gap: 30px;
   min-height: 659px;
-  margin-bottom: 50px;
+  margin-bottom: 126px;
 }
 .project__info {
 }
@@ -196,27 +219,6 @@ body {
   align-self: baseline;
   min-width: 142px;
 }
-.decbase-btn {
-  background: var(--bg-btn);
-  border-radius: 20px 0;
-  color: var(--color-more);
-  text-transform: uppercase;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 43px;
-  border: 2px solid var(--bg-btn);
-  transition: all ease-in-out 0.28s;
-}
-.decbase-btn:hover {
-  cursor: pointer;
-  background: var(--color-more);
-  color: var(--bg-btn);
-  box-shadow: 5px 5px 5px var(--bg-btn);
-}
-.decbase-btn:active {
-  transform: translate(1px, 1px);
-  box-shadow: none;
-}
 .project__img {
 }
 .project-img {
@@ -246,6 +248,134 @@ body {
   height: 100%;
   border-radius: 140px 0;
   object-fit: cover;
+}
+/* ============-SERVICE-=============== */
+.service__subtitle {
+  font-family: var(--ff-more);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: -0.2px;
+}
+.service__title {
+  font-family: var(--ff-more);
+  color: var(--color-title);
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 78px;
+}
+.service__slider {
+}
+.swiper {
+  width: 100%;
+  height: auto;
+  padding: 80px 10px;
+}
+.swiper-button-block {
+  position: absolute;
+  top: 0;
+  right: 30px;
+  width: 78px;
+  height: 60px;
+}
+.swiper-button-prev,
+.swiper-button-next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #37806b;
+  box-shadow: -1px 3px 10px 0px rgba(0, 0, 0, 0.3);
+  transition: all ease-in-out 0.28s;
+}
+.swiper-button-prev img,
+.swiper-button-next img {
+  width: 8px;
+  height: 10px;
+  filter: brightness(0) saturate(100%) invert(97%) sepia(25%) saturate(0%)
+    hue-rotate(18deg) brightness(116%) contrast(100%);
+}
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  background: #fff;
+}
+.swiper-button-next.swiper-button-disabled img,
+.swiper-button-prev.swiper-button-disabled img {
+  filter: none;
+}
+.swiper-button-next img {
+  transform: rotate(180deg);
+}
+.swiper-button-prev {
+  left: 0;
+  bottom: 0;
+}
+.swiper-button-next {
+  right: 0;
+  bottom: 0;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  display: none;
+}
+.service__swiper-wrapper {
+}
+.service__swiper-wrapper .swiper-slide-active {
+  background: var(--bg-more);
+  color: var(--color-more);
+}
+.service__swiper-wrapper .swiper-slide-active .service-slide__info_title {
+  color: var(--color-more);
+}
+.service__swiper-wrapper .swiper-slide-active .service-slide__img img {
+  filter: invert(99%) sepia(2%) saturate(0%) hue-rotate(180deg) brightness(116%)
+    contrast(100%);
+}
+.service__swiper-slide {
+  max-width: 425px;
+  width: 100%;
+  border-radius: 60px 0;
+  min-height: 193px;
+  background: #fff;
+  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.14);
+}
+.swiper-slide {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  column-gap: 10px;
+  padding: 21px;
+}
+.service-slide__img {
+  align-self: flex-start;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  margin-top: 21px;
+}
+.service-slide__img img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.service-slide__info {
+  flex: 0 1 307px;
+}
+.service-slide__info_title {
+  color: var(--color-title);
+  font-size: 24px;
+  font-weight: 700;
+}
+.service-slide__info_text {
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: -0.18px;
 }
 /* =========================== */
 @media (min-width: 1920px) {
