--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import "variablse.css";
-/* ==============RESER-CSS=================== */
+/* ==============RESET-CSS=================== */
 *,
 *::before,
 *::after {
@@ -181,12 +181,9 @@ body {
   position: relative;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  row-gap: 30px;
+  gap: 30px;
   min-height: 659px;
   margin-bottom: 126px;
-}
-.project__info {
 }
 .project-info {
   display: flex;
@@ -206,7 +203,7 @@ body {
   font-size: 72px;
   font-family: var(--ff-more);
   font-weight: 600;
-  line-height: 78px;
+  line-height: 1.08;
   margin-bottom: 23px;
 }
 .project-info__text {
@@ -219,13 +216,10 @@ body {
   align-self: baseline;
   min-width: 142px;
 }
-.project__img {
-}
 .project-img {
   position: relative;
   flex: 1 1 700px;
-  min-height: 480px;
-  max-height: 626px;
+  height: 626px;
   border-radius: 140px 0;
   margin-right: 34px;
 }
@@ -237,7 +231,7 @@ body {
   top: 33px;
   width: 100%;
   height: 100%;
-  border-radius: 140px 0;
+  border-radius: inherit;
   border: 2px solid #b0855b;
 }
 .project-img img {
@@ -246,7 +240,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  border-radius: 140px 0;
+  border-radius: inherit;
   object-fit: cover;
 }
 /* ============-SERVICE-=============== */
@@ -335,14 +329,15 @@ body {
     contrast(100%);
 }
 .service__swiper-slide {
+}
+.swiper-slide {
   max-width: 425px;
   width: 100%;
   border-radius: 60px 0;
   min-height: 193px;
+  height: auto;
   background: #fff;
   box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.14);
-}
-.swiper-slide {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -377,7 +372,72 @@ body {
   line-height: 28px;
   letter-spacing: -0.18px;
 }
-/* =========================== */
+/* ===========-ABOUT-============= */
+.about {
+  display: flex;
+  justify-content: space-between;
+  min-height: 758px;
+  gap: 93px;
+}
+.about-img {
+  flex: 1 1 681px;
+  border-radius: 140px 0;
+  position: relative;
+  height: 726px;
+  margin-top: 32px;
+  margin-left: 36px;
+}
+.about-img::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  border-radius: inherit;
+  bottom: 32px;
+  right: 36px;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #b0855b;
+}
+.about-img img {
+  border-radius: inherit;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.about-info {
+  flex: 1 1 544px;
+  align-self: center;
+}
+.about-info__subtitle {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  text-transform: uppercase;
+  margin-bottom: 6px;
+}
+.about-info__title {
+  color: var(--color-title);
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 57px;
+  margin-bottom: 22px;
+}
+.about-info__text {
+  flex: 1 1 544px;
+  font-size: 18px;
+  line-height: 30px;
+  margin-bottom: 28px;
+}
+.about-info__btn {
+  font-size: 16px;
+  max-width: 143px;
+  min-height: 43px;
+  width: 100%;
+}
 @media (min-width: 1920px) {
   .project__pattern {
     display: block;
@@ -388,11 +448,44 @@ body {
     height: 154px;
   }
 }
+@media (max-width: 1374px) {
+  /* ---SECTION PROJECT--- */
+  .project-info__title {
+    font-size: calc(39px + (72 - 39) * ((100vw - 320px) / (1375 - 320)));
+  }
+  .project-img {
+    height: calc(420px + (626 - 420) * ((100vw - 320px) / (1375 - 320)));
+    border-radius: calc(30px + (140 - 30) * ((100vw - 320px) / (1374 - 320))) 0;
+    margin-right: calc((11px + (34 - 11) * ((100vw - 320px) / (1374 - 320))));
+  }
+  .project-img::before {
+    top: calc((10px + (33 - 10) * ((100vw - 320px) / (1374 - 320))));
+    left: calc((11px + (34 - 11) * ((100vw - 320px) / (1374 - 320))));
+  }
+  /* ---SWIPER SLIDER---*/
+  .swiper-slide {
+    border-radius: calc(30px + (60 - 30) * ((100vw - 320px) / (1374 - 320))) 0;
+  }
+  /* --- SECTION ABOUT --- */
+  .about {
+    gap: calc(10px + (93 - 10) * ((100vw - 320px) / (1374 - 320)));
+  }
+  .about-img {
+    border-radius: calc(30px + (140 - 30) * ((100vw - 320px) / (1374 - 320))) 0;
+    height: calc(420px + (726 - 420) * ((100vw - 320px) / (1375 - 320)));
+    margin-left: calc((12px + (36 - 12) * ((100vw - 320px) / (1374 - 320))));
+  }
+  .about-img::before {
+    bottom: calc((10px + (32 - 10) * ((100vw - 320px) / (1374 - 320))));
+    right: calc((12px + (36 - 12) * ((100vw - 320px) / (1374 - 320))));
+  }
+}
 @media (max-width: 1200px) {
 }
 @media (max-width: 992px) {
 }
 @media (max-width: 768px) {
+  /* ---MENU--- */
   .header-nav {
     order: 3;
   }
@@ -461,6 +554,7 @@ body {
     flex-wrap: nowrap;
     row-gap: 30px;
     position: absolute;
+    z-index: 50;
     left: 0;
     top: 0;
     width: 100%;
@@ -475,6 +569,14 @@ body {
   }
   .nav-menu__link:hover:before {
     display: none;
+  }
+  /* ---SECTION PROJECT--- */
+  .project {
+    flex-wrap: wrap;
+  }
+  /* ---SECTION ABOUT--- */
+  .about {
+    flex-wrap: wrap;
   }
 }
 @media (max-width: 576px) {
