--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ body {
 }
 .service__slider {
 }
-.swiper {
+.service__slider {
   width: 100%;
   height: auto;
   padding: 80px 10px;
@@ -333,18 +333,16 @@ body {
 }
 .service__swiper-slide {
 }
-.swiper-slide {
-  max-width: 425px;
-  width: 100%;
+.service__swiper-slide {
   border-radius: 60px 0;
   min-height: 193px;
   height: auto;
   background: #fff;
   box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.14);
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  column-gap: 10px;
+  column-gap: 20px;
   padding: 21px;
 }
 .service-slide__img {
@@ -449,12 +447,14 @@ body {
   display: flex;
   gap: 109px;
   min-height: 754px;
+  margin-bottom: 177px;
 }
 .market-info {
   flex: 1 1 528px;
   align-self: center;
 }
 .market-info__years {
+  margin-bottom: 20px;
 }
 .market-info__title {
   color: var(--color-title);
@@ -463,8 +463,12 @@ body {
   font-weight: 500;
   line-height: 1.3;
   letter-spacing: 2px;
+  margin-bottom: 17px;
 }
 .market-info__btn {
+  max-width: 143px;
+  width: 100%;
+  min-height: 43px;
 }
 .market-img {
   flex: 1 1 682px;
@@ -493,6 +497,239 @@ body {
   width: 100%;
   height: 100%;
 }
+/* ---WORK--- */
+.work {
+  background: #f8f8f8;
+}
+.work:not(:last-child) {
+  margin-bottom: 163px;
+}
+.work-block {
+  display: flex;
+  flex-direction: column;
+  row-gap: 87px;
+  min-height: 677px;
+  padding: 87px 10px;
+}
+.work-block__title {
+  align-self: center;
+  max-width: 821px;
+  width: 100%;
+  color: var(--color-title);
+  font-family: var(--ff-more);
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 1.25;
+  text-align: center;
+}
+.work-block__info {
+}
+.work-info {
+  display: flex;
+  justify-content: space-between;
+  min-height: 278px;
+}
+.work-info__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 185px;
+  min-height: 182px;
+  background: #fff;
+  border-radius: 40px 0;
+}
+.work-info__item_start {
+  align-self: flex-start;
+}
+.work-info__item_end {
+  align-self: flex-end;
+}
+.work-info__item_number {
+  color: var(--color-title);
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+.work-info__item_title {
+  color: var(--color-main);
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.67;
+}
+/* ---REVIEWS--- */
+.reviews {
+}
+.reviews-block {
+}
+.reviews__contaier {
+}
+.reviews-block__subtitle {
+  font-family: var(--ff-more);
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  text-transform: uppercase;
+}
+.reviews-block__title {
+  font-family: var(--ff-more);
+  color: var(--color-title);
+  font-size: 48px;
+  font-weight: 500;
+  text-align: center;
+}
+.reviews-slider {
+  max-width: 1374px;
+  padding-top: 85px;
+  height: auto;
+}
+.swiper {
+}
+.swiper-wrapper {
+}
+.reviews-slider-wrapper {
+}
+.reviews-slider__slide {
+}
+.reviews-slide {
+  padding: 35px 35px 35px 69px;
+  height: auto;
+}
+.reviews-slide-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 8px;
+  min-height: 226px;
+  height: 100%;
+  padding: 25px 15px 10px 99px;
+  border-radius: 70px 0;
+  background: #fff;
+  box-shadow: 7px 7px 30px 5px rgba(66, 96, 84, 0.15);
+}
+.reviews-slide__icon {
+  position: absolute;
+  width: 130px;
+  height: 131px;
+  border-radius: 35px 0;
+  left: -61px;
+  top: 37px;
+}
+.reviews-slide__title {
+  position: relative;
+  color: var(--color-title);
+  font-size: 24px;
+  font-weight: 700;
+  padding-right: 70px;
+}
+.reviews-slide__title span {
+  color: var(--color-main);
+  font-size: 16px;
+  font-weight: 400;
+}
+.reviews-slide__text {
+  font-size: 18px;
+  line-height: 1.56;
+}
+.reviews-slide__brackets {
+  position: absolute;
+  top: -7px;
+  right: 20px;
+  display: inline-block;
+  margin-left: 15px;
+}
+/* ---SECTION BLOG--- */
+.blog {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #f8f8f8;
+  min-height: 1021px;
+}
+.blog-wrapper {
+}
+.blog__container {
+}
+.blog__subtitle {
+  text-transform: uppercase;
+  font-family: var(--ff-more);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.4;
+  text-align: center;
+  margin-bottom: 21px;
+}
+.blog__title {
+  color: #111;
+  font-family: var(--ff-more);
+  font-size: 48px;
+  font-weight: 500;
+  margin-bottom: 83px;
+  text-align: center;
+}
+.blog__items {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 153px;
+  row-gap: 60px;
+}
+.blog__item {
+}
+.blog-item {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 569px;
+}
+.blog-item__img {
+  position: relative;
+  width: calc(100% - 16px);
+  height: 387px;
+  margin-bottom: 17px;
+  border-radius: 100px 0;
+  margin-bottom: 43px;
+}
+.blog-item__img img {
+  position: absolute;
+  z-index: 50;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+.blog-item__img::before {
+  content: "";
+  position: absolute;
+  left: 16px;
+  top: 17px;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #b0855b;
+  border-radius: inherit;
+}
+.blog-item__title {
+  color: var(--color-title);
+  font-size: 30px;
+  font-weight: 600;
+}
+.blog-item__text {
+  flex: 1 1 auto;
+  font-size: 18px;
+  line-height: 1.56;
+  margin-bottom: 45px;
+}
+.blog-item__btn {
+  max-width: 271px;
+  width: 100%;
+  min-height: 53px;
+}
+.decbase-btn {
+}
+.blog-item__button {
+}
+/* ---MEDIA--- */
 @media (min-width: 1920px) {
   .project__pattern {
     display: block;
@@ -518,7 +755,7 @@ body {
     left: calc((11px + (34 - 11) * ((100vw - 320px) / (1374 - 320))));
   }
   /* ---SWIPER SLIDER---*/
-  .swiper-slide {
+  .service__swiper-slide {
     border-radius: calc(30px + (60 - 30) * ((100vw - 320px) / (1374 - 320))) 0;
   }
   /* --- SECTION ABOUT --- */
@@ -544,13 +781,38 @@ body {
     margin-right: calc((10px + (31 - 10) * ((100vw - 320px) / (1374 - 320))));
   }
   .market-img::before {
-    top: calc((8px + (28 - 8) * ((100vw - 320px) / (1374 - 320))));
-    left: calc((10px + (31 - 10) * ((100vw - 320px) / (1374 - 320))));
+    top: calc(8px + (28 - 8) * ((100vw - 320px) / (1374 - 320)));
+    left: calc(10px + (31 - 10) * ((100vw - 320px) / (1374 - 320)));
+  }
+  /* ---SECTION WORK--- */
+  .work-info__item_line {
+    display: none;
+  }
+  .work-block__title {
+    font-size: calc(30px + (48 - 30) * ((100vw - 320px) / (1374 - 320)));
+  }
+  /* ---SECTION BLOG--- */
+  .blog-item__img {
+    border-radius: calc(20px + (100 - 20) * ((100vw - 320px) / (1374 - 320))) 0;
+  }
+  .blog__items {
+    column-gap: calc(20px + (153 - 20) * ((100vw - 320px) / (1374 - 320)));
   }
 }
 @media (max-width: 1200px) {
 }
 @media (max-width: 992px) {
+  .work-info {
+    gap: 25px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .work-info__item {
+    align-self: center;
+  }
+  .blog__items {
+    flex-wrap: wrap;
+  }
 }
 @media (max-width: 768px) {
   /* ---MENU--- */
@@ -660,3 +922,16 @@ body {
 /* 
 @media screen and (width < 576px) {
 } */
+
+/* ---------------------------[ */
+
+.swiper2 {
+  width: 100%;
+  height: 300px;
+}
+
+.new-slide {
+  height: 150px;
+  /* width: 500px; */
+  background: #b0855b;
+}
